<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">
    tools:context="example.basic.com.exampletipcalculator.MainActivity">

    <TextView
        android:id="@+id/textView_BillAmount"
        android:layout_width="318dp"
        android:layout_height="41dp"
        android:layout_row="3"
        android:layout_column="1"
        android:gravity="center"
        android:hint="@string/textView_billAmountHint"
        android:labelFor="@+id/editText_BillAmount"
        android:padding="@dimen/padding_textView_default"
        android:text="@string/textView_BillAmount"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="normal" />

        <EditText
            android:id="@+id/editText_BillAmount"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:ems="10"
            android:inputType="number"
            android:maxLength="6"
            android:padding="@dimen/padding_textView_default"
            android:textStyle="bold" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="318dp"
        android:layout_height="60dp"
        android:layout_row="1"
        android:layout_column="1" />

        <TextView
            android:id="@+id/textViewPercent"
            android:layout_width="72dp"
            android:layout_height="58dp"
            android:layout_row="1"
            android:layout_column="0"
            android:gravity="center"
            android:text="@string/textViewPercent" />

        <TextView
            android:id="@+id/tip"
            android:layout_width="73dp"
            android:layout_height="56dp"
            android:layout_row="2"
            android:layout_column="0"
            android:gravity="center"
            android:text="@string/tip" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="318dp"
        android:layout_height="55dp"
        android:layout_row="2"
        android:layout_column="1"
        android:gravity="center"
        android:text="@string/tipTextView"
        android:textSize="18sp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="73dp"
            android:layout_height="56dp"
            android:layout_row="3"
            android:layout_column="0"
            android:gravity="center"
            android:text="@string/total" />

    <Spinner
        android:id="@+id/NumPeople"
        android:layout_width="169dp"
        android:layout_height="53dp"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="center"
        android:gravity="center"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="235dp" />

        <TextView
            android:id="@+id/AmountOfPeople"
            android:layout_width="73dp"
            android:layout_height="56dp"
            android:layout_row="4"
            android:layout_column="0"
            android:gravity="center"
            android:text="How Many People"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="272dp" />

        <TextView
            android:id="@+id/amountPerPerson"
            android:layout_width="73dp"
            android:layout_height="56dp"
            android:layout_row="5"
            android:layout_column="0"
            android:gravity="center"
            android:text="Amount Per Person"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="376dp" />

    <TextView
        android:id="@+id/AmountPerPerson"
        android:layout_width="315dp"
        android:layout_height="58dp"
        android:layout_row="5"
        android:layout_column="1"
        android:gravity="center"
        android:text="$0.00"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="383dp" />

    <RadioGroup
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:gravity="center"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="460dp">

        <RadioButton
            android:id="@+id/NoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No"
            android:onClick="onRadioButtonClicked"
            android:clickable="true"/>

        <RadioButton
            android:id="@+id/TipButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tip"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton
            android:id="@+id/TotalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total"
            android:onClick="onRadioButtonClicked"
            />
    </RadioGroup>



</GridLayout>


